--- a/React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/src/assets/css/reset.less
+++ b/React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/src/assets/css/reset.less
@@ -1,6 +1,6 @@
 @import './variables.less';
 
-// *通配符-选取页面中所有元素(标签) ,对性能有一定影响；
+// *通配符-选取页面中所有元素(标签)都会进行一个重置 ,对性能有一定影响，但影响不是很大，很多公司在用；
 // *{
 //     padding: 0;
 //     margin: 0;
