--- a/React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/src/assets/css/variables.less
+++ b/React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/src/assets/css/variables.less
@@ -2,6 +2,11 @@
 @textColorSecondary: #222;
 
 // 方法一：设置主题颜色
+/*
+:root --> 获取根元素html
+--color-text是定义的变量，这就是css中定义变量的方式，定义之后可在其他css属性里用此变量做值
+font-size: var(--font-size)通过var使用变量
+*/
 :root {
     --primary-color: #ff385c;
 }
